--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,21 +1,27 @@
+* {
+	box-sizing: border-box;
+}
+
 html {
-  font-size: 62.5%;
+	font-size: 62.5%;
 }
 
 body {
-  background: white;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: $m-size
+	background: white;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: $m-size;
+	color: $dark-grey;
+	line-height: 1.6;
 }
 
 button {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 button:disabled {
-  cursor: default;
+	cursor: default;
 }
 
 .is-active {
-  font-weight: bold;
+	font-weight: bold;
 }
